[project]
name = "ODM"
version = "3.6.0"
description = "A command line toolkit to generate maps, point clouds, 3D models and DEMs from drone, balloon or kite images."
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "appsettings==0.8",
    "beautifulsoup4==4.13.4",
    "python-dateutil==2.9.0",
    "edt==3.0.0",
    "ExifRead==3.5.1",
    "Fiona==1.10.1; sys_platform == 'linux'",
    "Fiona==1.10.1; sys_platform == 'darwin'",
    "joblib==1.5.1",
    "matplotlib==3.10.3",
    "numpy==2.3.2",
    "Pillow==11.3.0",
    "vmem==1.0.2",
    "pyodm==1.5.12",
    "pyproj==3.7.1",
    "Pysolar==0.13",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "rasterio==1.4.3; sys_platform == 'linux'",
    "rasterio==1.4.3; sys_platform == 'darwin'",
    "gdal[numpy]==3.8.4; sys_platform == 'linux'",
    "gdal[numpy]==3.8.4; sys_platform == 'darwin'",
    "repoze.lru==0.7",
    "scikit-learn==1.7.1",
    "scikit-image==0.25.2",
    "scipy==1.16.1",
    "xmltodict==0.14.2",
    "fpdf2==2.8.3",
    "Shapely==2.1.1",
    "onnxruntime==1.22.1",
    "pygltflib==1.16.5",
    "packaging==25.0",
    "codem==0.26.1",
    "trimesh==4.7.1",
    "piexif==1.1.3",
    "rawpy==0.25.0",
]

[dependency-groups]
resize = [
    "piexif>=1.1.3",
]

[project.scripts]
odm = "run:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opendm"]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
[tool.uv.sources]
# Windows specific binary wheels
"Fiona" = { url = "https://github.com/OpenDroneMap/windows-deps/releases/download/2.6.0/fiona-1.10.1-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" }
"rasterio" = { url = "https://github.com/OpenDroneMap/windows-deps/releases/download/2.6.0/rasterio-1.4.3-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" }
# NOTE we are using GDAL 3.11.1 for Windows, but 3.8.4 for Linux/Mac due to underlying system libs
"gdal" = { url = "https://github.com/OpenDroneMap/windows-deps/releases/download/2.6.0/gdal-3.11.1-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" }
